--- a/src/app/topbar/topbar.component.html
+++ b/src/app/topbar/topbar.component.html
@@ -9,6 +9,9 @@
                 </div>
             </div>
 
+            <span>
+                Minitube
+            </span>
             <div class="flex flex-auto items-center justify-start">
                 <div class="relative mt-2 rounded-80% shadow-sm w-700">
                     <input type="text" name="price" id="price"
